--- a/taui/.stylelintrc
+++ b/taui/.stylelintrc
@@ -1,5 +1,12 @@
 {
   "extends": "stylelint-azavea",
+  "ignoreFiles": [
+      "node_modules/**/*",
+      "src/sass/03_vendors/**/*.scss",
+      "src/sass/04_reset/_reset.scss",
+      "src/taui.css",
+      "src/components/log/*"
+  ],
   "rules": {
     "at-rule-empty-line-before": null,
     "declaration-empty-line-before": null,
