--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -13,6 +13,8 @@ Systems:
   AlternateTripsTitle: Alternatively use
   Waiting: waiting included
   NoAccess: No data from this point...
+  Take: Take
+  InaccessibleWithin: inaccessible within
 Faster: faster
 NewTrip: New Trip
 Geocoding:
@@ -39,7 +41,7 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
-  DriveMode: driving
+  DriveMode: drive
   TransitMode: transit
   FromOrigin: from
   WebsiteLink: Official site
