Display different message to go back to favorites

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -33,7 +33,8 @@ Map:
     ClearMarkers: Clear markers
 Dock:
   Favorites: Saved recommendations
-  GoBackFromDetails: Back to recommendations
+  GoBackToRecommendations: Back to recommendations
+  GoBackToFavorites: Back to saved recommendations
   GoPreviousPage: Go back
   GoNextPage: Show more
   NoResults: No results
