--- a/taui/package.json
+++ b/taui/package.json
@@ -45,7 +45,8 @@
     "d3-scale": "~2.2.2",
     "date-fns": "~1.30.1",
     "debug": "~4.1.1",
-    "focus-visible": "^4.1.5",
+    "focus-visible": "~4.1.5",
+    "geojson-bbox": "~0.0.0",
     "isomorphic-fetch": "~2.2.1",
     "jsolines": "~2.1.0",
     "leaflet": "~1.3.4",
