Display neighborhood images
Display images as links with attribution in the neighborhood summary cards and detail views.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -46,6 +46,7 @@ NeighborhoodDetails:
   TransitMode: transit
   FromOrigin: from
   WebsiteLink: Official site
+  WikipediaAttribution: via Wikimedia Commons
   WikipediaLink: Wikipedia
   GoogleSearchLink: Google
   GoogleMapsLink: Google Maps
