Add importance options to user profile
Add three dropdown inputs to user profile page to set importance for weighting.
(Weighting changes to be implemented separately.)

Closes #122.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -109,6 +109,9 @@ Profile:
   DeleteProfile: Delete profile
   DeleteProfileError: Failed to delete profile. Please try again.
   Destinations: Frequent destinations
+  ImportanceAccessibility: Accessibility
+  ImportanceSchools: Schools
+  ImportanceViolentCrime: Violent crime
   Primary: Primary
   Purpose: Purpose
   Rooms: Number of rooms in voucher
