Show if ECC in neighborhood details
Closes #128.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -57,6 +57,7 @@ NeighborhoodInfo:
   EducationPercentile: Education percentile
   HasNoTransitStop: Has no transit stop
   HasTransitStop: Has transit stop
+  IsExpandedChoice: Expanded Choice Community
   NearPark: Near a park
   NearRailStation: Near a rail station
   NearTransit: Near transit stops
