Indicate travel times are approximate
Connects #144.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -69,6 +69,7 @@ Strings:
 Slower: slower
 Title: ECHOLocator
 Units:
+  About: About
   Minutes: minutes
   Mins: min
 Agency: Boston Housing Authority
