--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -42,6 +42,7 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
+  CraigslistSearchLink: Search Craigslist
   DriveMode: drive
   TransitMode: transit
   FromOrigin: from
