--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -42,11 +42,11 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
-  CraigslistSearchLink: Search Craigslist
+  CraigslistSearchLink: Craigslist
   DriveMode: drive
   TransitMode: transit
   FromOrigin: from
-  WebsiteLink: Official site
+  WebsiteLink: Website
   WikipediaAttribution: via Wikimedia Commons
   WikipediaLink: Wikipedia
   GoogleSearchLink: Google
