Swap semantics of ecc checkbox

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -115,7 +115,7 @@ Profile:
   NameRequired: Please enter a name for the head of household.
   SaveError: Failed to save profile. Please try again.
   Title: Profile
-  IncludeNonExpandedChoiceCommunities: Include non-expanded choice communities
+  ExpandedChoiceCommunitiesOnly: Expanded Choice Communities only
 ImportanceLabels:
   1: Not important
   2: Somewhat important
