--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -116,7 +116,7 @@ Profile:
   SaveError: Failed to save profile. Please try again.
   Title: Profile
   ExpandedChoiceCommunitiesOnly: Expanded Choice Communities only
-  UseCommuterRail: Can take commuter rail
+  UseCommuterRail: Can take commuter rail or express bus
 ImportanceLabels:
   1: Not important
   2: Somewhat important
