Filter network dropdown for commuter rail or not
Based on user profile setting for commuter rail use, filter network set in dropdown.
Remove unused `showOnMap` network configuration property, and add `commuter` property.

--- a/taui/config.json
+++ b/taui/config.json
@@ -10,19 +10,23 @@
   "networks": [
     {
       "name": "Peak",
-      "url": "https://d2z7d5345ccuw9.cloudfront.net/5c9bdffa37ed813dbe27f8f1"
+      "url": "https://d2z7d5345ccuw9.cloudfront.net/5c9bdffa37ed813dbe27f8f1",
+      "commuter": true
     },
     {
       "name": "Off Peak",
-      "url": "https://d2z7d5345ccuw9.cloudfront.net/5c9be04737ed813dbe27f8f3"
+      "url": "https://d2z7d5345ccuw9.cloudfront.net/5c9be04737ed813dbe27f8f3",
+      "commuter": true
     },
     {
       "name": "Peak No Express",
-      "url": "https://d2z7d5345ccuw9.cloudfront.net/5cb8ebc037ed813dbe29182e"
+      "url": "https://d2z7d5345ccuw9.cloudfront.net/5cb8ebc037ed813dbe29182e",
+      "commuter": false
     },
     {
       "name": "Off Peak No Express",
-      "url": "https://d2z7d5345ccuw9.cloudfront.net/5cb8ebe437ed813dbe291830"
+      "url": "https://d2z7d5345ccuw9.cloudfront.net/5cb8ebe437ed813dbe291830",
+      "commuter": false
     }
   ]
 }
