--- a/taui/configurations/default/store.yml
+++ b/taui/configurations/default/store.yml
@@ -7,12 +7,16 @@ data:
   networks:
     - name: Peak
       url: https://d2z7d5345ccuw9.cloudfront.net/5c9bdffa37ed813dbe27f8f1
+      commuter: true
     - name: Off Peak
       url: https://d2z7d5345ccuw9.cloudfront.net/5c9be04737ed813dbe27f8f3
+      commuter: true
     - name: Peak No Express
       url: https://d2z7d5345ccuw9.cloudfront.net/5cb8ebc037ed813dbe29182e
+      commuter: false
     - name: Off Peak No Express
       url: https://d2z7d5345ccuw9.cloudfront.net/5cb8ebe437ed813dbe291830
+      commuter: false
 geocoder:
   proximity: -71.057929,42.360612 # longitude,latitude
   types: country,region,postcode,district,place,locality,neighborhood,address,poi # https://www.mapbox.com/api-documentation/?language=cURL#request-format
