--- a/taui/package.json
+++ b/taui/package.json
@@ -32,15 +32,15 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
-    "@aws-amplify/auth": "~1.2.15",
-    "@aws-amplify/core": "~1.0.22",
-    "@aws-amplify/storage": "~1.0.25",
-    "@aws-amplify/ui": "~1.0.15",
+    "@aws-amplify/auth": "~1.2.24",
+    "@aws-amplify/core": "~1.0.27",
+    "@aws-amplify/storage": "~1.0.30",
+    "@aws-amplify/ui": "~1.0.19",
     "@conveyal/gridualizer": "~2.1.0",
     "@conveyal/lonlat": "~1.4.0",
     "@conveyal/woonerf": "~4.1.0",
-    "@mapbox/polyline": "~1.0.0",
-    "aws-amplify-react": "~2.3.0",
+    "@mapbox/polyline": "~1.1.0",
+    "aws-amplify-react": "~2.3.8",
     "babel-plugin-css-modules-transform": "~1.6.2",
     "d3-scale": "~2.2.2",
     "date-fns": "~1.30.1",
@@ -51,12 +51,12 @@
     "jsolines": "~2.1.0",
     "leaflet": "~1.3.4",
     "lodash": "~4.17.11",
-    "logrocket": "~0.6.19",
+    "logrocket": "^1.0.0",
     "logrocket-react": "~3.0.0",
     "react": "~16.8.3",
     "react-dom": "~16.8.3",
     "react-leaflet": "~1.9.1",
-    "react-leaflet-vectorgrid": "~2.1.3",
+    "react-leaflet-vectorgrid": "~2.2.1",
     "react-redux": "~5.1.1",
     "react-router": "~5.0.0",
     "react-router-dom": "~5.0.0",
@@ -70,9 +70,12 @@
   },
   "devDependencies": {
     "mastarm": "https://github.com/azavea/mastarm.git#dev",
-    "semantic-release": "~15.13.3",
-    "stylelint": "^9.10.1",
+    "semantic-release": "^15.13.12",
+    "stylelint": "^9.6.0",
     "stylelint-azavea": "https://github.com/azavea/stylelint-azavea#develop"
+  },
+  "peerDependencies": {
+    "prop-types": "~15.7.2"
   },
   "standard": {
     "parser": "babel-eslint"
