Append directions link to drive time estimate in detail view
- Changed Google Maps link into a lookup instead of directions link
- Fixed bug where destination purpose wasn't rendering in detail and search views
- Style cleanup of transit route segments

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -46,6 +46,7 @@ NeighborhoodDetails:
   DriveMode: drive
   TransitMode: transit
   FromOrigin: from
+  DirectionsLink: Directions
   WebsiteLink: Website
   WikipediaAttribution: via Wikimedia Commons
   WikipediaLink: Wikipedia
