Overhaul result card facts
- Replace schools and safety textual values with graphical meters
- Meters have temporary hard-coded values for now
- Remove overall score
- Add rental units (provisional format for now)

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -59,6 +59,7 @@ NeighborhoodDetails:
 NeighborhoodInfo:
   EducationCategory: Schools
   Population: Population
+  RentalUnits: Rental units
   Score: Overall score
   ViolentCrime: Public safety
 PageNotFound: Oops! There is no page at
