Neighborhood detail layout changes
- Clearer sections
- Remove quintile table
- Add estimated max rent (placeholder values need replacing)
- Add new graphical charts
- Added new links to search tools section

TODO
- Max rent and #rooms need to be dynamic
- Section 8 link needs a util function
- Zillow link should be replaced with Apartments.com?
- Remove Craigslist link?

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -44,17 +44,23 @@ Dock:
   ShowAllButton: All
   ShowSavedButton: Saved
 NeighborhoodDetails:
+  AboutNeighborhoodLinksHeading: Learn about this neighborhood
+  ChildCareSearchLink: Child Care Search
   CraigslistSearchLink: Craigslist
-  DriveMode: drive
-  TransitMode: transit
-  FromOrigin: from
   DirectionsLink: Directions
+  DriveMode: drive
+  FromOrigin: from
+  GoogleSearchLink: Google
+  GoogleMapsLink: Google Maps
+  MassHousingLink: Mass Housing
+  MaxRent: Est. max rent
+  ModeSummary: via
+  MoreSearchToolsLinksHeading: More search tools
+  Section8Link: Section 8
+  TransitMode: transit
   WebsiteLink: Website
   WikipediaAttribution: via Wikimedia Commons
   WikipediaLink: Wikipedia
-  GoogleSearchLink: Google
-  GoogleMapsLink: Google Maps
-  ModeSummary: via
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
   EducationCategory: Schools
