Add corejs 2 as build dependency
Fixes building jsolines package, which depends on an older mastarm.

--- a/taui/package.json
+++ b/taui/package.json
@@ -69,6 +69,7 @@
     "reselect": "~4.0.0"
   },
   "devDependencies": {
+    "core-js": "~2.6.9",
     "mastarm": "https://github.com/azavea/mastarm.git#dev",
     "semantic-release": "^15.13.12",
     "stylelint": "^9.6.0",
