--- a/taui/package.json
+++ b/taui/package.json
@@ -62,6 +62,7 @@
     "react-router-dom": "~5.0.1",
     "react-select": "~1.2.1",
     "react-select-fast-filter-options": "~0.2.3",
+    "react-tooltip": "~3.10.0",
     "react-virtualized-select": "~3.1.3",
     "redux": "~4.0.1",
     "redux-actions": "~2.6.5",
