--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -31,6 +31,7 @@ Map:
     SetStart: Set start
     SetEnd: Set end
     ClearMarkers: Clear markers
+  Unreachable: cannot be reached by transit
 Dock:
   LocationLabel: From
   NetworkLabel: When
