--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -129,6 +129,11 @@ Profile:
   SaveError: Failed to save profile. Please try again.
   Title: Profile
   UseCommuterRail: Include commuter rail and express bus
+Tooltips:
+  AboveAverage: above average
+  Average: about average
+  BelowAverage: below average
+  RentalUnits: %(town) has an %(averageRelation) number of rental units for the state.<br />From 2017-2018 there were %(totalMapc) units listed on craigslist (source MAPC).
 ImportanceLabels:
   1: Not important
   2: Somewhat important
