Show school choice text with link
Link to school choice sites for Boston or Cambridge when not showing school ranking.

Connects #219.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -64,6 +64,7 @@ NeighborhoodDetails:
   WikipediaLink: Wikipedia
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
+  SchoolChoice: "%(townArea) has school choice"
   EducationCategory: Schools
   Population: Population
   RentalUnits: Rental units
