--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -64,7 +64,7 @@ NeighborhoodDetails:
   WikipediaLink: Wikipedia
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
-  SchoolChoice: "%(townArea) has school choice"
+  SchoolChoice: School choice
   EducationCategory: Schools
   Population: Population
   RentalUnits: Rental units
