School choice link copy and style

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -65,7 +65,7 @@ NeighborhoodDetails:
   WikipediaLink: Wikipedia
   ZillowSearchLink: Zillow
 NeighborhoodInfo:
-  SchoolChoice: School choice
+  SchoolChoice: School choice options »
   EducationCategory: Schools
   Population: Population
   RentalUnits: Rental units
