Add Rent Estimator link to detail view

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -58,6 +58,7 @@ NeighborhoodDetails:
   MaxRent: Est. max rent
   ModeSummary: via
   MoreSearchToolsLinksHeading: More search tools
+  RentEstimatorLink: Rent Estimator
   Section8Link: Section 8
   TransitMode: transit
   WebsiteLink: Website
