Modify search tool links
Add Apartments.com static link and remove Section 8.

Closes #255.

--- a/taui/configurations/default/messages.yml
+++ b/taui/configurations/default/messages.yml
@@ -47,6 +47,7 @@ Dock:
   ShowSavedButton: Saved
 NeighborhoodDetails:
   AboutNeighborhoodLinksHeading: Learn about this neighborhood
+  ApartmentsDotComLink: Apartments.com
   ChildCareSearchLink: Child Care Search
   CraigslistSearchLink: Craigslist
   DirectionsLink: Directions
