--- a/deployment/amplify/development/amplify/backend/auth/echolocatorDevelopmentAuth/echolocatorDevelopmentAuth-cloudformation-template.yml
+++ b/deployment/amplify/development/amplify/backend/auth/echolocatorDevelopmentAuth/echolocatorDevelopmentAuth-cloudformation-template.yml
@@ -100,7 +100,7 @@ Parameters:
                     
   userPoolGroupList:
     Type: CommaDelimitedList
-                                    
+                                                
   parentStack:
     Type: String
                 
@@ -121,7 +121,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'echolo1d14b8b2_sns-role', !Join ['',['echolo1d14b8b2_sns-role', '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'echolobc426169_sns-role', !Join ['',['echolobc426169_sns-role', '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -133,10 +133,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: echolo1d14b8b2_role_external_id
+                sts:ExternalId: echolobc426169_role_external_id
       Policies: 
         - 
-          PolicyName: echolo1d14b8b2-sns-policy
+          PolicyName: echolobc426169-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -160,7 +160,14 @@ Resources:
           Name: email
           Required: true
           Mutable: true
-        
+        -
+          Name: voucher
+          Required: false
+          Mutable: false
+          AttributeDataType: String
+          StringAttributeConstraints:
+            MinLength: "6"
+            MaxLength: "8"
       
       
       
@@ -182,7 +189,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: echolo1d14b8b2_role_external_id
+        ExternalId: echolobc426169_role_external_id
     
   
     
@@ -202,7 +209,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: echolo1d14b8b2_app_clientWeb
+      ClientName: echolobc426169_app_clientWeb
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -215,7 +222,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: echolo1d14b8b2_app_client
+      ClientName: echolobc426169_app_client
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -283,7 +290,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: echolo1d14b8b2_userpoolclient_lambda_iam_policy
+      PolicyName: echolobc426169_userpoolclient_lambda_iam_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -300,7 +307,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: echolo1d14b8b2_userpoolclient_lambda_log_policy
+      PolicyName: echolobc426169_userpoolclient_lambda_log_policy
       Roles: 
         - !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',[!Ref userpoolClientLambdaRole, '-', !Ref env]]]
       PolicyDocument:
@@ -340,7 +347,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'echolocatorDevIdentityPool', !Join ['',['echolocatorDevIdentityPool', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'echolocatorDevelopmentIDPool', !Join ['',['echolocatorDevelopmentIDPool', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
