--- a/deployment/amplify/development/amplify/backend/backend-config.json
+++ b/deployment/amplify/development/amplify/backend/backend-config.json
@@ -6,7 +6,7 @@
 			"dependsOn": [
 				{
 					"category": "auth",
-					"resourceName": "echolocatorDevAuth",
+					"resourceName": "echolocatorDevelopmentAuth",
 					"attributes": [
 						"UserPoolId",
 						"AppClientIDWeb",
@@ -16,32 +16,10 @@
 				}
 			]
 		},
-		"echolocatorDevAuth": {
+		"echolocatorDevelopmentAuth": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation",
 			"dependsOn": []
-		}
-	},
-	"storage": {
-		"echolocatorDevStorage": {
-			"service": "S3",
-			"providerPlugin": "awscloudformation",
-			"dependsOn": [
-				{
-					"category": "auth",
-					"resourceName": "echolocatorDevAuth",
-					"attributes": [
-						"UserPoolId"
-					]
-				},
-				{
-					"category": "auth",
-					"resourceName": "userPoolGroups",
-					"attributes": [
-						"counselorsGroupRole"
-					]
-				}
-			]
 		}
 	}
 }
