Set Amplify storage permissions for counselors
Regenerate storage configuration for dev environment.
Modify configuration to only grant counselors bucket list permissions,
but still allow other authenticated users to get a specific file in the bucket.

--- a/deployment/amplify/development/amplify/backend/backend-config.json
+++ b/deployment/amplify/development/amplify/backend/backend-config.json
@@ -21,5 +21,27 @@
 			"providerPlugin": "awscloudformation",
 			"dependsOn": []
 		}
+	},
+	"storage": {
+		"echolocatorDevStorage": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "auth",
+					"resourceName": "echolocatorDevelopmentAuth",
+					"attributes": [
+						"UserPoolId"
+					]
+				},
+				{
+					"category": "auth",
+					"resourceName": "userPoolGroups",
+					"attributes": [
+						"counselorsGroupRole"
+					]
+				}
+			]
+		}
 	}
 }
