--- a/taui/package.json
+++ b/taui/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/azavea/echo-locator",
   "dependencies": {
+    "@aws-amplify/api": "~1.2.4",
     "@aws-amplify/auth": "~1.5.0",
     "@aws-amplify/core": "~1.2.4",
     "@aws-amplify/storage": "~1.2.4",
