Add endpoint to copy profile for user
Add Lambda at /profiles that will copy an existing S3 profile to a path containing the given user identity ID.

Supports migrating existing profiles, and allowing counselors to edit profile before first client login.

--- a/deployment/amplify/emailLogin/amplify/backend/backend-config.json
+++ b/deployment/amplify/emailLogin/amplify/backend/backend-config.json
@@ -58,6 +58,27 @@
 					]
 				}
 			]
+		},
+		"echolocatorDevEmailProfiles": {
+			"service": "Lambda",
+			"providerPlugin": "awscloudformation",
+			"build": true,
+			"dependsOn": [
+				{
+					"category": "auth",
+					"resourceName": "echolocatorDevEmailAuth",
+					"attributes": [
+						"UserPoolId"
+					]
+				},
+				{
+					"category": "storage",
+					"resourceName": "echolocatorDevEmailStorage",
+					"attributes": [
+						"BucketName"
+					]
+				}
+			]
 		}
 	},
 	"api": {
@@ -85,6 +106,20 @@
 					"resourceName": "userPoolGroups",
 					"attributes": [
 						"counselorsGroupRole"
+					]
+				}
+			]
+		},
+		"echolocatorDevEmailProfilesApi": {
+			"service": "API Gateway",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "echolocatorDevEmailProfiles",
+					"attributes": [
+						"Name",
+						"Arn"
 					]
 				}
 			]
