--- a/deployment/amplify/emailLogin/amplify/backend/function/echolocatorDevEmailProfiles/src/package.json
+++ b/deployment/amplify/emailLogin/amplify/backend/function/echolocatorDevEmailProfiles/src/package.json
@@ -7,7 +7,8 @@
     "aws-sdk": "^2.567.0",
     "aws-serverless-express": "^3.3.6",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid-validate": "0.0.3"
   },
   "devDependencies": {},
   "scripts": {
